--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container mt-3 p-2">
-        <div> <h1 class="crud"> Cruds Operation </h1> </div>
+        <div> <h1 class="crud"> Crud Operations </h1> </div>
         <div>
             <h6 class="text-center mt-2 text-secondary">Search Your Team</h6>
             <div class="d-flex justify-content-center">
